# Shudder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  packaging.yml  playback.yml  wayland.yml
.github/actions/setup-native-linux/: action.yml
.github/workflows/: ci.yml  release.yml
packaging/appimage/: AppRun  build-appimage.sh
packaging/flatpak/: io.github.Shudder.yml.in
packaging/linux/: shudder.desktop.in  shudder.metainfo.xml.in
qml/: Main.qml
qml/chat/: ChatPanel.qml
qml/components/: AvatarImage.qml  GlassButton.qml  IconButton.qml  MonoSlider.qml  SideChannelRow.qml  StableImage.qml  StreamCard.qml  Theme.qml
qml/dialogs/: AboutDialog.qml  AuthDialog.qml  SettingsSheet.qml
qml/player/: NativePlayer.qml  PlayerControls.qml  StandardPlayer.qml
src/: CMakeLists.txt
src/app/: AppController.cpp  AppController.h  main.cpp  shudder_config.h.in
src/chat/: ChatModel.cpp  ChatModel.h  IrcParser.cpp  IrcParser.h
src/core/: UrlUtils.cpp  UrlUtils.h  XdgPaths.cpp  XdgPaths.h
src/playback/: MpvVideoItem.cpp  MpvVideoItem.h  PlayerController.cpp  PlayerController.h  StreamlinkResolver.cpp  StreamlinkResolver.h
src/storage/: PreferencesService.cpp  PreferencesService.h  SecretService.cpp  SecretService.h
src/twitch/: TwitchAuthService.cpp  TwitchAuthService.h  TwitchDirectoryModel.cpp  TwitchDirectoryModel.h  TwitchWebsiteSession.cpp  TwitchWebsiteSession.h
src/web/: PlayerHostServer.cpp  PlayerHostServer.h
tests/: CMakeLists.txt  tst_chat_jump.cpp  tst_core.cpp  tst_tab_transitions.cpp
